infra/sf-fixture/force-app/main/default/objects/Property__c/Property__c.object-meta.xml
<CustomObject>
    <description>A real-estate property. Root object of the Northbeam migration fixture.</description>
    <label>Property</label>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>