infra/sf-fixture/force-app/main/default/objects/Property__c/fields/Amenities__c.field-meta.xml
<CustomField>
    <fullName>Amenities__c</fullName>
    <label>Amenities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pool</fullName>
            </value>
            <value>
                <fullName>Gym</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Rooftop</fullName>
            </value>
            <value>
                <fullName>Doorman</fullName>
            </value>
            <value>
                <fullName>Laundry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>