infra/sf-fixture/force-app/main/default/objects/Property__c/fields/Flow_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Flow_Stamp__c</fullName>
    <label>Flow Stamp</label>
    <length>120</length>
    <type>Text</type>
</CustomField>