infra/sf-fixture/force-app/main/default/objects/Property__c/fields/Is_Furnished__c.field-meta.xml
<CustomField>
    <fullName>Is_Furnished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Furnished</label>
    <type>Checkbox</type>
</CustomField>