infra/sf-fixture/force-app/main/default/objects/Property__c/fields/Last_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Last_Inspection__c</fullName>
    <label>Last Inspection</label>
    <type>DateTime</type>
</CustomField>