infra/sf-fixture/force-app/main/default/objects/Property__c/fields/Lease_Count__c.field-meta.xml
<CustomField>
    <fullName>Lease_Count__c</fullName>
    <label>Lease Count</label>
    <summaryForeignKey>Lease__c.Property__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>