infra/sf-fixture/force-app/main/default/objects/Property__c/fields/Listing_Link__c.field-meta.xml
<CustomField>
    <fullName>Listing_Link__c</fullName>
    <formula>HYPERLINK(Listing_URL__c, "View listing")</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Listing Link</label>
    <type>Text</type>
</CustomField>