infra/sf-fixture/force-app/main/default/objects/Property__c/fields/Solar_Score__c.field-meta.xml
<CustomField>
    <fullName>Solar_Score__c</fullName>
    <label>Solar Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>