infra/sf-fixture/force-app/main/default/objects/Property__c/fields/Total_Monthly_Rent__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Rent__c</fullName>
    <label>Total Monthly Rent</label>
    <summarizedField>Lease__c.Monthly_Rent__c</summarizedField>
    <summaryForeignKey>Lease__c.Property__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>