infra/sf-fixture/force-app/main/default/objects/Property__c/fields/Valuation__c.field-meta.xml
<CustomField>
    <fullName>Valuation__c</fullName>
    <formula>Purchase_Price__c * 1.25 + Square_Feet__c * 15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valuation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>