infra/sf-fixture/force-app/main/default/objects/Property__c/recordTypes/Commercial.recordType-meta.xml
<RecordType>
    <fullName>Commercial</fullName>
    <active>true</active>
    <description>Commercial properties (office, retail, industrial).</description>
    <label>Commercial</label>
</RecordType>