infra/sf-fixture/force-app/main/default/objects/Property__c/recordTypes/Residential.recordType-meta.xml
<RecordType>
    <fullName>Residential</fullName>
    <active>true</active>
    <description>Residential properties (houses, apartments).</description>
    <label>Residential</label>
</RecordType>